# Blockchain-Project-ic-chess

./: Cargo.toml  README.md  dfx.json  key  key.pub  package-lock.json  package.json
src/ic-chess-backend/: Cargo.toml
src/ic-chess-backend/src/: lib.rs
src/ic-chess-frontend/: index.html  package.json
src/ic-chess-frontend/src/: App.jsx  Board.jsx  agent.js  joinCompat.js
src/ic-chess-frontend/src/styles/: pieces.css
