[package]
name = "ic-chess-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
shakmaty = { version = "0.29", features = ["std", "serde"] }
sha2 = "0.10"
base64 = "0.22"

